--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -15,6 +15,10 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url 'https://pkgs.dev.azure.com/PublicPackagesCS/Behavior/_packaging/BehaviorAnalytics.SDK/maven/v1'
+            name 'BehaviorAnalytics.SDK.Android'
+        }
     }
 }
 
