--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,45 +1,36 @@
-name: clear_sale_behavior_analytics
-description: A ClearSale behavior analytics plugin
-version: 0.0.1
-homepage:
+name: behavior_analytics_flutter_sdk
+description: A new flutter plugin project.
+version: 0.5.11
+homepage: clear.sale
 
 environment:
-  sdk: '>=3.0.6 <4.0.0'
-  flutter: ">=3.3.0"
+  sdk: '>=2.17.0 <3.0.0'
+  flutter: ">=1.20.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  plugin_platform_interface: ^2.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter packages.
+# The following section is specific to Flutter.
 flutter:
   # This section identifies this Flutter project as a plugin project.
-  # The 'pluginClass' specifies the class (in Java, Kotlin, Swift, Objective-C, etc.)
-  # which should be registered in the plugin registry. This is required for
-  # using method channels.
-  # The Android 'package' specifies package in which the registered class is.
-  # This is required for using method channels on Android.
-  # The 'ffiPlugin' specifies that native code should be built and bundled.
-  # This is required for using `dart:ffi`.
-  # All these are used by the tooling to maintain consistency when
+  # The 'pluginClass' and Android 'package' identifiers should not ordinarily
+  # be modified. They are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
   plugin:
     platforms:
       android:
-        package: com.foodtosave.clearsale_behavior_analytics.clear_sale_behavior_analytics
-        pluginClass: ClearSaleBehaviorAnalyticsPlugin
-      ios:
-        pluginClass: ClearSaleBehaviorAnalyticsPlugin
-
+        package: com.clearsale.behavior.behavior_analytics_flutter_sdk
+        pluginClass: BehaviorAnalyticsFlutterSdkPlugin
+      ios: 
+        pluginClass: SwiftClearsaleFingerprintPlugin
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -49,7 +40,7 @@ flutter:
   # https://flutter.dev/assets-and-images/#from-packages
   #
   # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
+  # https://flutter.dev/assets-and-images/#resolution-aware.
 
   # To add custom fonts to your plugin package, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
