fix: namespace is needed in new agp versions

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -31,6 +31,8 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
+    namespace "com.foodtosave.foodtosave"
+    testNamespace "com.foodtosave.apptest"
     compileSdkVersion 30
 
     defaultConfig {
