fix: adjust namespace

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -31,8 +31,8 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
-    namespace "com.foodtosave.foodtosave"
-    testNamespace "com.foodtosave.apptest"
+    namespace "com.clearsale.behavior.behavior_analytics_flutter_sdk"
+    
     compileSdkVersion 30
 
     defaultConfig {
