--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: behavior_analytics_flutter_sdk
 description: A new flutter plugin project.
-version: 0.6.1
+version: 0.6.3
 homepage: clear.sale
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.20.0"
+  sdk: ">=3.0.0 <4.0.0"
+  flutter: 3.24.3
 
 dependencies:
   flutter:
